# graphann

./: CMakeLists.txt  README.md
.history/: CMakeLists_20260419212948.txt  CMakeLists_20260419223303.txt  CMakeLists_20260419223304.txt  CMakeLists_20260419223835.txt  CMakeLists_20260419223836.txt  CMakeLists_20260419223837.txt  CMakeLists_20260419223846.txt  CMakeLists_20260419223853.txt  CMakeLists_20260419223857.txt  CMakeLists_20260419224829.txt  CMakeLists_20260420014450.txt  CMakeLists_20260420014454.txt  CMakeLists_20260420014459.txt  CMakeLists_20260420014500.txt  CMakeLists_20260420030421.txt  CMakeLists_20260420030446.txt  CMakeLists_20260420030511.txt  CMakeLists_20260420153331.txt  CMakeLists_20260420153400.txt  CMakeLists_20260420153401.txt  CMakeLists_20260420153640.txt  CMakeLists_20260420153740.txt  CMakeLists_20260420153805.txt  CMakeLists_20260420153807.txt  CMakeLists_20260420163109.txt  CMakeLists_20260420163120.txt  CMakeLists_20260420163122.txt
.history/include/: rlg_index_20260419230127.h  rlg_index_20260419231655.h  rlg_index_20260420013807.h  rlg_index_20260420162414.h
.history/scripts/: plot_pareto_20260420162709.py  plot_results_20260419193307.py  plot_results_20260419205306.py  run_sift1m_ivrg_20260420152923.sh  run_sift1m_ivrg_20260420162647.sh  run_sift1m_rlg_20260419205637.sh  run_sift1m_rlg_20260420014149.sh  run_sift1m_rlg_20260420024801.sh  run_sift1m_rlg_20260420024803.sh  run_sift1m_rlg_20260420024804.sh  run_sift1m_rlg_20260420031744.sh  run_sift1m_rlg_20260420031944.sh  run_sift1m_rlg_20260420032535.sh  run_sift1m_rlg_20260420032549.sh  run_sift1m_rlg_20260420033101.sh  run_sift1m_rlg_20260420033130.sh  run_sift1m_rlg_20260420033137.sh  run_sift1m_rlg_20260420033216.sh  run_sift1m_rlg_20260420033235.sh  run_sift1m_rlg_20260420033247.sh  run_sift1m_rlg_20260420162633.sh
.history/src2/: build_rlg_20260419215753.cpp  build_rlg_20260419215808.cpp  build_rlg_20260419215810.cpp  build_rlg_20260419215855.cpp  build_rlg_20260420013935.cpp  build_rlg_20260420162816.cpp  rlg_index_20260419223000.cpp  rlg_index_20260419223006.cpp  rlg_index_20260419223016.cpp  rlg_index_20260419223023.cpp  rlg_index_20260419224833.cpp  rlg_index_20260419225239.cpp  rlg_index_20260419225244.cpp  rlg_index_20260419225824.cpp  rlg_index_20260419231058.cpp  rlg_index_20260420013842.cpp  rlg_index_20260420162805.cpp  search_rlg_20260419231720.cpp  search_rlg_20260420014001.cpp  search_rlg_20260420033016.cpp  search_rlg_20260420162831.cpp
.history/src_ivrg/: ivrg_index_20260420152923.cpp  ivrg_index_20260420162902.cpp  search_ivrg_20260420152923.cpp  search_ivrg_20260420162924.cpp
include/: io_utils.h  ivrg_index.h  jl_projection.h  radial_layer_index.h  rlg_index.h  vamana_index.h  vamana_index_jl.h
results/: compare_results.csv
scripts/: plot_pareto.py  plots.py  run_sift1m.sh  run_sift1m_jl.sh  run_sift1m_rlg.sh
src/: build_rlg.cpp  compare_rlg_vs_vamana.cpp  io_utils.cpp  radial_layer_index.cpp  search_index.cpp  search_rlg.cpp  vamana_index.cpp
src2/: build_rlg.cpp  rlg_index.cpp  search_rlg.cpp
src_ivrg/: build_ivrg.cpp  ivrg_index.cpp
src_jl/: build_index_jl.cpp  search_index_jl.cpp  vamana_index_jl.cpp
